--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#68a63c</color>
+    <color name="colorPrimaryDark">#68a63c</color>
+    <color name="colorAccent">#68a63c</color>
+
+    <color name="colorDescriptionText">#7B7B7B</color>
+    <color name="colorDivider">#979797</color>
+    <color name="colorWarning">#ffcc00</color>
+    <color name="colorTextButton">#ffffff</color>
 </resources>
