color to resource

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dedede"
+    android:background="@color/colorBackgroundGray"
     tools:context=".presentation.view.activity.MainActivity">
 
     <com.dev.anton.cbr.presentation.view.CurrencyConvertView
