refactoring size in dimens

--- a/app/src/main/res/layout/currency_exchange_view_big.xml
+++ b/app/src/main/res/layout/currency_exchange_view_big.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="@dimen/margin_padding_normal"
     tools:context=".presentation.view.activity.MainActivity">
 
     <com.dev.anton.cbr.presentation.view.CurrencyEditText
@@ -11,8 +11,8 @@
         style="@style/CurrencyEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/margin_padding_small"
+        android:layout_marginTop="@dimen/margin_padding_small"
         app:layout_constraintEnd_toStartOf="@+id/srCurrencyFrom"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,13 +22,13 @@
         android:id="@+id/tvCurrencyTo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginEnd="3dp"
+        android:layout_marginStart="@dimen/margin_padding_tiny"
+        android:layout_marginEnd="@dimen/margin_padding_tiny"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textAlignment="textEnd"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_xxnormal"
         app:layout_constraintBottom_toBottomOf="@+id/tvEqual"
         app:layout_constraintEnd_toStartOf="@+id/srCurrencyTo"
         app:layout_constraintStart_toEndOf="@+id/tvEqual"
@@ -38,9 +38,8 @@
         android:id="@+id/srCurrencyFrom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/margin_padding_tiny"
+        android:layout_marginEnd="@dimen/margin_padding_small"
         android:background="@drawable/spinner_bg"
         app:layout_constraintBottom_toBottomOf="@+id/etCurrencyFrom"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +50,7 @@
         android:id="@+id/srCurrencyTo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="@dimen/margin_padding_small"
         android:background="@drawable/spinner_bg"
         app:layout_constraintBottom_toBottomOf="@+id/tvCurrencyTo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,8 +60,8 @@
         android:id="@+id/ivClock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/margin_padding_small"
+        android:layout_marginTop="@dimen/margin_padding_small"
         android:src="@drawable/ic_clock_alert_outline_black_18dp"
         android:tint="@color/colorWarning"
         android:visibility="gone"
@@ -75,11 +74,11 @@
         android:id="@+id/tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_padding_tiny"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textColor="@color/colorDescriptionText"
-        android:textSize="11sp"
+        android:textSize="@dimen/text_size_small"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/ivClock"
         app:layout_constraintStart_toEndOf="@+id/ivClock"
@@ -89,9 +88,9 @@
         android:id="@+id/tvEqual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/margin_padding_large"
         android:text="@string/equal"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_size_large"
         app:layout_constraintStart_toStartOf="@+id/etCurrencyFrom"
         app:layout_constraintTop_toBottomOf="@+id/etCurrencyFrom" />
 
@@ -107,10 +106,10 @@
         style="@style/ButtonBase"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/margin_padding_large"
         android:enabled="false"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="@dimen/margin_padding_normal"
+        android:paddingRight="@dimen/margin_padding_normal"
         android:text="@string/convert"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,20 +117,20 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/vDivider1"
         android:layout_width="0dp"
-        android:layout_height="0.4dp"
-        android:layout_marginTop="2dp"
+        android:layout_height="@dimen/divider_height"
+        android:layout_marginTop="@dimen/margin_padding_tiny"
         android:background="@color/colorDivider"
         app:layout_constraintEnd_toEndOf="@+id/srCurrencyFrom"
         app:layout_constraintStart_toStartOf="@+id/etCurrencyFrom"
         app:layout_constraintTop_toBottomOf="@+id/etCurrencyFrom" />
 
     <View
-        android:id="@+id/view2"
+        android:id="@+id/vDivider2"
         android:layout_width="0dp"
-        android:layout_height="0.4dp"
-        android:layout_marginTop="2dp"
+        android:layout_height="@dimen/divider_height"
+        android:layout_marginTop="@dimen/margin_padding_tiny"
         android:background="@color/colorDivider"
         app:layout_constraintEnd_toEndOf="@+id/srCurrencyTo"
         app:layout_constraintStart_toStartOf="@+id/etCurrencyFrom"
