--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#68a63c</color>
 
     <color name="colorDescriptionText">#7B7B7B</color>
-    <color name="colorDivider">#979797</color>
+    <color name="colorDivider">#dedede</color>
     <color name="colorWarning">#ffcc00</color>
     <color name="colorTextButton">#ffffff</color>
     <color name="colorBackgroundGray">#dedede</color>
