--- a/app/src/main/res/layout/currency_exchange_view.xml
+++ b/app/src/main/res/layout/currency_exchange_view.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="8dp"
-    android:paddingTop="16dp"
-    android:paddingRight="8dp"
-    android:paddingBottom="16dp"
+    android:paddingLeft="@dimen/margin_padding_small"
+    android:paddingTop="@dimen/margin_padding_normal"
+    android:paddingRight="@dimen/margin_padding_small"
+    android:paddingBottom="@dimen/margin_padding_normal"
     tools:context=".presentation.view.activity.MainActivity">
 
     <com.dev.anton.cbr.presentation.view.CurrencyEditText
@@ -24,11 +24,11 @@
         android:id="@+id/tvCurrencyTo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="3dp"
+        android:layout_marginEnd="@dimen/margin_padding_tiny"
         android:maxLines="1"
         android:textAlignment="textEnd"
         android:textColor="@color/colorAccent"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_size_xxnormal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/srCurrencyTo"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,8 +39,7 @@
         android:id="@+id/srCurrencyFrom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginStart="@dimen/margin_padding_tiny"
         android:background="@drawable/spinner_bg"
         app:layout_constraintBottom_toBottomOf="@+id/etCurrencyFrom"
         app:layout_constraintEnd_toStartOf="@+id/tvEqual"
@@ -52,7 +51,6 @@
         android:id="@+id/srCurrencyTo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
         android:background="@drawable/spinner_bg"
         app:layout_constraintBottom_toBottomOf="@+id/tvCurrencyTo"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,10 +62,10 @@
         android:id="@+id/tvEqual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="@dimen/margin_padding_tiny"
+        android:layout_marginEnd="@dimen/margin_padding_tiny"
         android:text="@string/equal"
-        android:textSize="26sp"
+        android:textSize="@dimen/text_size_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvCurrencyTo"
         app:layout_constraintStart_toEndOf="@+id/srCurrencyFrom"
@@ -77,8 +75,8 @@
         android:id="@+id/ivClock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/margin_padding_small"
+        android:layout_marginTop="@dimen/margin_padding_small"
         android:src="@drawable/ic_clock_alert_outline_black_18dp"
         android:tint="@color/colorWarning"
         android:visibility="gone"
@@ -91,9 +89,9 @@
         android:id="@+id/tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginStart="@dimen/margin_padding_tiny"
         android:textColor="@color/colorDescriptionText"
-        android:textSize="11sp"
+        android:textSize="@dimen/text_size_small"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/ivClock"
         app:layout_constraintStart_toEndOf="@+id/ivClock"
@@ -112,10 +110,10 @@
         style="@style/ButtonBase"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/button_height"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:enabled="false"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:paddingLeft="@dimen/margin_padding_normal"
+        android:paddingRight="@dimen/margin_padding_normal"
         android:text="@string/convert"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,9 +121,9 @@
         app:layout_constraintVertical_bias="0.99" />
 
     <View
-        android:id="@+id/view"
+        android:id="@+id/vDivider"
         android:layout_width="0dp"
-        android:layout_height="0.5dp"
+        android:layout_height="@dimen/divider_height"
         android:background="@color/colorDescriptionText"
         app:layout_constraintEnd_toEndOf="@+id/etCurrencyFrom"
         app:layout_constraintStart_toStartOf="@+id/etCurrencyFrom"
