--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -3,5 +3,5 @@
     android:id="@+id/simple_spinner_text_quantity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingEnd="20dp"
-    android:textSize="17sp" />
+    android:paddingEnd="@dimen/margin_padding_xnormal"
+    android:textSize="@dimen/text_size_xnormal" />
