--- a/app/src/main/res/drawable/btn_shape_active.xml
+++ b/app/src/main/res/drawable/btn_shape_active.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="@dimen/corner_radius" />
+    <corners android:radius="@dimen/card_corner_radius" />
     <gradient
         android:angle="270"
         android:centerColor="#e87600"
